// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPI spec snapshots > deeply nested groups 1`] = `
"{
  "openapi": "3.0.0",
  "info": {
    "title": "Nested Admin API",
    "version": "1.0.0"
  },
  "paths": {
    "/v1/admin/users": {
      "get": {
        "operationId": "v1_admin_users_list",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "type": "array",
                  "items": {
                    "type": "object",
                    "properties": {
                      "id": {
                        "type": "string"
                      },
                      "name": {
                        "type": "string"
                      }
                    },
                    "required": [
                      "id",
                      "name"
                    ],
                    "additionalProperties": false
                  }
                }
              }
            }
          }
        },
        "tags": [
          "admin"
        ]
      }
    },
    "/v1/admin/users/roles": {
      "get": {
        "operationId": "v1_admin_users_roles_list",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "type": "array",
                  "items": {
                    "type": "object",
                    "properties": {
                      "id": {
                        "type": "string"
                      },
                      "name": {
                        "type": "string"
                      },
                      "permissions": {
                        "type": "array",
                        "items": {
                          "type": "string"
                        }
                      }
                    },
                    "required": [
                      "id",
                      "name",
                      "permissions"
                    ],
                    "additionalProperties": false
                  }
                }
              }
            }
          }
        },
        "tags": [
          "admin"
        ]
      }
    },
    "/v1/admin/users/roles/{roleId}": {
      "get": {
        "operationId": "v1_admin_users_roles_get",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string"
                    },
                    "name": {
                      "type": "string"
                    },
                    "permissions": {
                      "type": "array",
                      "items": {
                        "type": "string"
                      }
                    }
                  },
                  "required": [
                    "id",
                    "name",
                    "permissions"
                  ],
                  "additionalProperties": false
                }
              }
            }
          }
        },
        "tags": [
          "admin"
        ],
        "parameters": [
          {
            "name": "roleId",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ]
      },
      "post": {
        "operationId": "v1_admin_users_roles_assign",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "type": "object",
                  "properties": {
                    "success": {
                      "type": "boolean"
                    }
                  },
                  "required": [
                    "success"
                  ],
                  "additionalProperties": false
                }
              }
            }
          }
        },
        "tags": [
          "admin"
        ],
        "parameters": [
          {
            "name": "roleId",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "requestBody": {
          "required": true,
          "content": {
            "application/json": {
              "schema": {
                "$schema": "http://json-schema.org/draft-07/schema#",
                "type": "object",
                "properties": {
                  "userId": {
                    "type": "string"
                  }
                },
                "required": [
                  "userId"
                ],
                "additionalProperties": false
              }
            }
          }
        },
        "security": [
          {
            "Bearer": []
          }
        ]
      }
    }
  },
  "components": {
    "schemas": {},
    "securitySchemes": {
      "Bearer": {
        "type": "http",
        "scheme": "bearer",
        "bearerFormat": "JWT"
      }
    }
  }
}"
`;

exports[`OpenAPI spec snapshots > multi-version API with auth and metadata 1`] = `
"{
  "openapi": "3.0.0",
  "info": {
    "title": "Multi-Version API",
    "version": "2.0.0",
    "description": "API with multiple versions and auth schemes"
  },
  "paths": {
    "/v1/health": {
      "get": {
        "operationId": "v1__health",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "type": "object",
                  "properties": {
                    "status": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "status"
                  ],
                  "additionalProperties": false
                }
              }
            }
          }
        },
        "summary": "Health check",
        "tags": [
          "system"
        ]
      }
    },
    "/v1/users": {
      "get": {
        "operationId": "listUsersLegacy",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "type": "array",
                  "items": {
                    "type": "object",
                    "properties": {
                      "id": {
                        "type": "string"
                      },
                      "email": {
                        "type": "string"
                      },
                      "role": {
                        "type": "string",
                        "enum": [
                          "admin",
                          "user"
                        ]
                      }
                    },
                    "required": [
                      "id",
                      "email",
                      "role"
                    ],
                    "additionalProperties": false
                  }
                }
              }
            }
          }
        },
        "summary": "List users (deprecated)",
        "description": "Use v2 instead",
        "tags": [
          "users"
        ],
        "deprecated": true,
        "security": [
          {
            "ApiKey": []
          }
        ]
      }
    },
    "/v2/users": {
      "get": {
        "operationId": "v2_users_list",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "type": "array",
                  "items": {
                    "type": "object",
                    "properties": {
                      "id": {
                        "type": "string"
                      },
                      "email": {
                        "type": "string"
                      },
                      "role": {
                        "type": "string",
                        "enum": [
                          "admin",
                          "user"
                        ]
                      }
                    },
                    "required": [
                      "id",
                      "email",
                      "role"
                    ],
                    "additionalProperties": false
                  }
                }
              }
            }
          }
        },
        "summary": "List users",
        "tags": [
          "users"
        ],
        "parameters": [
          {
            "name": "role",
            "in": "query",
            "required": false,
            "schema": {
              "type": "string",
              "enum": [
                "admin",
                "user"
              ]
            }
          }
        ],
        "security": [
          {
            "Bearer": []
          }
        ]
      }
    },
    "/v2/users/{id}": {
      "get": {
        "operationId": "v2_users_get",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string"
                    },
                    "email": {
                      "type": "string"
                    },
                    "role": {
                      "type": "string",
                      "enum": [
                        "admin",
                        "user"
                      ]
                    }
                  },
                  "required": [
                    "id",
                    "email",
                    "role"
                  ],
                  "additionalProperties": false
                }
              }
            }
          }
        },
        "summary": "Get user",
        "tags": [
          "users"
        ],
        "parameters": [
          {
            "name": "id",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "security": [
          {
            "Bearer": []
          }
        ]
      }
    }
  },
  "components": {
    "schemas": {},
    "securitySchemes": {
      "ApiKey": {
        "type": "apiKey",
        "name": "X-API-Key",
        "in": "header"
      },
      "Bearer": {
        "type": "http",
        "scheme": "bearer",
        "bearerFormat": "JWT"
      }
    }
  },
  "servers": [
    {
      "url": "https://api.example.com",
      "description": "Production"
    }
  ],
  "tags": [
    {
      "name": "system"
    },
    {
      "name": "users"
    }
  ]
}"
`;

exports[`OpenAPI spec snapshots > simple CRUD API 1`] = `
"{
  "openapi": "3.0.0",
  "info": {
    "title": "Products API",
    "version": "1.0.0"
  },
  "paths": {
    "/v1/products": {
      "get": {
        "operationId": "v1_products_list",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "type": "object",
                  "properties": {
                    "products": {
                      "type": "array",
                      "items": {
                        "type": "object",
                        "properties": {
                          "id": {
                            "type": "string",
                            "description": "Product identifier"
                          },
                          "name": {
                            "type": "string",
                            "minLength": 1,
                            "maxLength": 100,
                            "description": "Product name"
                          },
                          "price": {
                            "type": "number",
                            "exclusiveMinimum": 0,
                            "description": "Price in cents"
                          },
                          "inStock": {
                            "type": "boolean",
                            "description": "Availability status"
                          }
                        },
                        "required": [
                          "id",
                          "name",
                          "price",
                          "inStock"
                        ],
                        "additionalProperties": false
                      },
                      "description": "List of products"
                    },
                    "total": {
                      "type": "number",
                      "description": "Total count"
                    }
                  },
                  "required": [
                    "products",
                    "total"
                  ],
                  "additionalProperties": false
                }
              }
            }
          }
        },
        "summary": "List products",
        "description": "Returns a paginated list of products",
        "tags": [
          "products"
        ],
        "parameters": [
          {
            "name": "page",
            "in": "query",
            "required": true,
            "schema": {
              "default": 1,
              "description": "Page number",
              "type": "integer",
              "exclusiveMinimum": 0,
              "maximum": 9007199254740991
            }
          },
          {
            "name": "limit",
            "in": "query",
            "required": true,
            "schema": {
              "default": 20,
              "description": "Items per page",
              "type": "integer",
              "exclusiveMinimum": 0,
              "maximum": 100
            }
          }
        ]
      },
      "post": {
        "operationId": "v1_products_create",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string",
                      "description": "Product identifier"
                    },
                    "name": {
                      "type": "string",
                      "minLength": 1,
                      "maxLength": 100,
                      "description": "Product name"
                    },
                    "price": {
                      "type": "number",
                      "exclusiveMinimum": 0,
                      "description": "Price in cents"
                    },
                    "inStock": {
                      "type": "boolean",
                      "description": "Availability status"
                    }
                  },
                  "required": [
                    "id",
                    "name",
                    "price",
                    "inStock"
                  ],
                  "additionalProperties": false
                }
              }
            }
          }
        },
        "summary": "Create a product",
        "tags": [
          "products"
        ],
        "requestBody": {
          "required": true,
          "content": {
            "application/json": {
              "schema": {
                "$schema": "http://json-schema.org/draft-07/schema#",
                "type": "object",
                "properties": {
                  "name": {
                    "type": "string",
                    "minLength": 1,
                    "maxLength": 100,
                    "description": "Product name"
                  },
                  "price": {
                    "type": "number",
                    "exclusiveMinimum": 0,
                    "description": "Price in cents"
                  },
                  "inStock": {
                    "type": "boolean",
                    "description": "Availability status"
                  }
                },
                "required": [
                  "name",
                  "price",
                  "inStock"
                ],
                "additionalProperties": false
              }
            }
          }
        },
        "security": [
          {
            "Bearer": []
          }
        ]
      }
    },
    "/v1/products/{id}": {
      "get": {
        "operationId": "v1_products_get",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string",
                      "description": "Product identifier"
                    },
                    "name": {
                      "type": "string",
                      "minLength": 1,
                      "maxLength": 100,
                      "description": "Product name"
                    },
                    "price": {
                      "type": "number",
                      "exclusiveMinimum": 0,
                      "description": "Price in cents"
                    },
                    "inStock": {
                      "type": "boolean",
                      "description": "Availability status"
                    }
                  },
                  "required": [
                    "id",
                    "name",
                    "price",
                    "inStock"
                  ],
                  "additionalProperties": false
                }
              }
            }
          }
        },
        "summary": "Get product by ID",
        "tags": [
          "products"
        ],
        "parameters": [
          {
            "name": "id",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string",
              "description": "Product ID"
            }
          }
        ]
      },
      "patch": {
        "operationId": "v1_products_update",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string",
                      "description": "Product identifier"
                    },
                    "name": {
                      "type": "string",
                      "minLength": 1,
                      "maxLength": 100,
                      "description": "Product name"
                    },
                    "price": {
                      "type": "number",
                      "exclusiveMinimum": 0,
                      "description": "Price in cents"
                    },
                    "inStock": {
                      "type": "boolean",
                      "description": "Availability status"
                    }
                  },
                  "required": [
                    "id",
                    "name",
                    "price",
                    "inStock"
                  ],
                  "additionalProperties": false
                }
              }
            }
          }
        },
        "summary": "Update a product",
        "tags": [
          "products"
        ],
        "parameters": [
          {
            "name": "id",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string",
              "description": "Product ID"
            }
          }
        ],
        "requestBody": {
          "required": true,
          "content": {
            "application/json": {
              "schema": {
                "$schema": "http://json-schema.org/draft-07/schema#",
                "type": "object",
                "properties": {
                  "name": {
                    "type": "string",
                    "minLength": 1,
                    "maxLength": 100,
                    "description": "Product name"
                  },
                  "price": {
                    "type": "number",
                    "exclusiveMinimum": 0,
                    "description": "Price in cents"
                  },
                  "inStock": {
                    "type": "boolean",
                    "description": "Availability status"
                  }
                },
                "additionalProperties": false
              }
            }
          }
        },
        "security": [
          {
            "Bearer": []
          }
        ]
      },
      "delete": {
        "operationId": "v1_products_delete",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "type": "object",
                  "properties": {
                    "success": {
                      "type": "boolean"
                    }
                  },
                  "required": [
                    "success"
                  ],
                  "additionalProperties": false
                }
              }
            }
          }
        },
        "summary": "Delete a product",
        "tags": [
          "products"
        ],
        "parameters": [
          {
            "name": "id",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string",
              "description": "Product ID"
            }
          }
        ],
        "security": [
          {
            "Bearer": []
          }
        ]
      }
    }
  },
  "components": {
    "schemas": {},
    "securitySchemes": {
      "Bearer": {
        "type": "http",
        "scheme": "bearer",
        "bearerFormat": "JWT"
      }
    }
  }
}"
`;
